2005-01-05  Matthias Clasen  <mclasen@redhat.com>

	* gdk/x11/gdkevents-x11.c (gdk_wm_protocols_filter): Update 
	the user time when receiving a WM_DELETE message.  (#162980, 
	Elijah Newren)
	
Tue Jan  4 16:52:14 2005  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_button_event):
	only reorder on button 1, part of #141937

Tue Jan  4 11:36:43 2005  Søren Sandmann  <sandmann@redhat.com>

	Bug 162112.
	
	* gtk/gtktextview.c (text_window_realize): Add GDK_EXPOSURE_MASK
	to win->window's event_mask

	* gtk/gtkviewport.c (gtk_viewport_realize): Add GDK_EXPOSURE_MASK
	to viewport->view_window.

2005-01-04  Matthias Clasen  <mclasen@redhat.com>

	* demos/testpixbuf.c (main): Remove the size_prepared callback,
	to test incremental display.
	(new_testrgb_window): Return the drawing area, not the window,
	since we want to queue draws on the drawing area.

2005-01-03  Matthias Clasen  <mclasen@redhat.com>

	* examples/*: Re-extract.

	* docs/tutorial/gtk-tut.sgml: Small corrections.
	
	* docs/tutorial/gtk-tut.sgml: Some updates for the drawing
	section.  (#161414, Robert Ancell)

	* docs/tutorial/gtk-tut.sgml: Make it build.

	* gtk/gtkdialog.c (gtk_dialog_run): Some clarification
	regarding modality.  (#112903, Dave Bordoley)

	* gtk/gtkfixed.c (gtk_fixed_set_has_window): 
	Add a little motivation.  (#145556, Tommi Komulainen)

	* docs/tutorial/gtk-tut.sgml: Clarify section on 
	g_signal_connect_swapped.   (#120543, David Bourguignon)

	Make gtk_icon_theme_load_icon() work independent of
	icon factory initialization.  (#162791, Tristan Van Berkom)
	
	* gtk/gtkiconfactory.[hc]: Rename ensure_default_icons to
	_gtk_icon_factory_ensure_default_icons, and make it non-static.

	* gtk/gtkicontheme.c (find_builtin_icon): ..and call it here.

2005-01-02  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserbutton.c (gtk_file_chooser_button_remove_shortcut_folder): 
	Don't add a shortcut here.  (#162752, Tor Lillqvist)
